--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz HTML, CSS & JavaScript</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="C:\Users\laoui\OneDrive\Bureau\laouini_rimel_quiz_html_css_js\style css.css">
 </head>
 <body>
     <div class="quiz-container">
